# Naia

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  conanfile.txt
GSRegister/: Includes.hpp  Util.hpp  Widget.cpp  Widget.hpp  Widget.ui  main.cpp
GSRegister/config/: network.properties  server.properties
GSRegister/data/: servernames.xml
GameServer/: Application.cpp  Application.hpp  CMakeLists.txt  Cell.hpp  Character.cpp  Character.hpp  Chat.cpp  Chat.hpp  ConfigDefault.hpp  Connection.cpp  Connection.hpp  GameConstants.cpp  GameConstants.hpp  HandleAccountTasks.cpp  HandleAccountTasks.hpp  HandleBasicTasks.cpp  HandleBasicTasks.hpp  HandleCommands.cpp  HandleCommands.hpp  HandleGameTasks.cpp  HandleGameTasks.hpp  HandleServerRequest.cpp  HandleServerRequest.hpp  Level.cpp  Level.hpp  Map.cpp  Map.hpp  Naia.hpp  PacketBuilder.hpp  Session.cpp  Session.hpp  StorageProvider.cpp  StorageProvider.hpp  Unit.hpp  World.cpp  World.hpp  main.cpp  main.hpp
GameServer/config/: banned_names.txt  character.properties  hexid.txt  logs.properties  network.properties  server.properties  staff.properties  todo.txt
GameServer/data/: announcements.txt
GameServer/data/langs/: EN_us.lang  FR_fr.lang
LoginServer/: Application.cpp  Application.hpp  CMakeLists.txt  ConfigDefault.hpp  GameServer.cpp  GameServer.hpp  LoginServer.cpp  LoginServer.hpp  Naia.hpp  Session.cpp  Session.hpp  TaskHandler.cpp  TaskHandler.hpp  app.rc  main.cpp
LoginServer/config/: logs.properties  network.properties  server.properties
LoginServer/data/: servernames.xml
Shared/: CMakeLists.txt  Config.cpp  Config.hpp  ConfigDefault.hpp  Connector.hpp  Constants.hpp  Database.cpp  Database.hpp  Kernel.cpp  Kernel.hpp  LanguageManager.cpp  LanguageManager.hpp  Log.cpp  Log.hpp  Log2.cpp  Log2.hpp  MersenneTwister.cpp  MersenneTwister.hpp  Packet.hpp  PacketHeader.hpp  ProgressUnit.cpp  ProgressUnit.hpp  Singleton.hpp  ThreadPool.cpp  ThreadPool.hpp  Timer.hpp  Utils.cpp  Utils.hpp  _Common.hpp
Tools/: database_installer.bat  game_install.sql  login_install.sql
sql/game/: access_levels.sql  admin_commands.sql  area_data.sql  banks.sql  char_creation_items.sql  char_relations.sql  char_templates.sql  characters.sql  containers.sql  experience.sql  subarea_data.sql  zaaps.sql
sql/game/updates/: next.sql
sql/login/: account_data.sql  accounts.sql  banned_ip.sql  gameservers.sql
sql/login/updates/: _executor.bat  next.sql
